--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Image Slides Generator</title>
 	<script src="./lib/jquery-3.6.0.min.js"></script>
+	<!-- Use CDN for Phosphor Icons because local package is too large -->
 	<script src="https://unpkg.com/phosphor-icons@1.4.1"></script>
 	<script src="./lib/swiper-bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./lib/swiper-bundle.min.css" />
