added the feature to remove the current slide

--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
           </p>
         </div>
         <div class="bottom-buttons-container">
-          <button class="btn1 btn-fullscreen">
-            <i class="ph-frame-corners"></i>&nbsp; Fullscreen Current Slide
-          </button>
           <button class="btn1 duplicate-slide">
-            <i class="ph-copy"></i>&nbsp; Duplicate Current Slide
+            <i class="ph-copy"></i>&nbsp; Duplicate
+          </button>
+          <button class="btn1 btn-fullscreen">
+            <i class="ph-arrows-out"></i>&nbsp; Fullscreen
+          </button>
+          <button class="btn1 remove-slide">
+            <i class="ph-trash"></i>&nbsp; Remove
           </button>
         </div>
       </div>
